Added openAI client

--- a/group-assignment.ipynb
+++ b/group-assignment.ipynb
@@ -31,7 +31,8 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import os"
+    "import os\n",
+    "from openai import OpenAI"
    ]
   },
   {
@@ -46,13 +47,22 @@
     "\n",
     "OPENAI_API_KEY = ''\n",
     "try:\n",
-    "    from google.colab import userdata\n",
-    "    OPENAI_API_KEY = userdata.get('OPENAI_API_KEY', '')\n",
+    "\tfrom google.colab import userdata\n",
+    "\tprint(\"Running in Google Colab\")\n",
+    "\tOPENAI_API_KEY = userdata.get('OPENAI_API_KEY', '')\n",
     "except ImportError:\n",
-    "    import dotenv\n",
-    "    dotenv.load_dotenv()\n",
-    "    OPENAI_API_KEY = os.environ.get('OPENAI_API_KEY', '')\n",
-    "\n"
+    "\timport dotenv\n",
+    "\tdotenv.load_dotenv()\n",
+    "\tprint(\"Running locally\")\n",
+    "\tOPENAI_API_KEY = os.environ.get('OPENAI_API_KEY', '')\n",
+    "\n",
+    "openai = OpenAI(api_key=OPENAI_API_KEY)\n",
+    "try:\n",
+    "\tresponse = openai.models.list()\n",
+    "\tprint(\"Available models:\", response.data)\n",
+    "\tprint(\"OpenAI API key is valid.\")\n",
+    "except Exception as e:\n",
+    "\tprint(\"Error with OpenAI API key:\", e)"
    ]
   },
   {
@@ -120,6 +130,14 @@
     "plt.title('Attrition Distribution')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6d56280",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -138,7 +156,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
