--- a/group-assignment.ipynb
+++ b/group-assignment.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "id": "80ac60a8",
    "metadata": {},
    "outputs": [
@@ -45,6 +45,8 @@
       "Requirement already satisfied: fastapi in d:\\shared\\is5126-final\\is5126-final-assignment\\.venv\\lib\\site-packages (0.119.0)\n",
       "Requirement already satisfied: streamlit in d:\\shared\\is5126-final\\is5126-final-assignment\\.venv\\lib\\site-packages (1.50.0)\n",
       "Requirement already satisfied: dotenv in d:\\shared\\is5126-final\\is5126-final-assignment\\.venv\\lib\\site-packages (0.9.9)\n",
+      "Requirement already satisfied: pydantic in d:\\shared\\is5126-final\\is5126-final-assignment\\.venv\\lib\\site-packages (2.12.3)\n",
+      "Requirement already satisfied: requests in d:\\shared\\is5126-final\\is5126-final-assignment\\.venv\\lib\\site-packages (2.32.5)\n",
       "Requirement already satisfied: contourpy>=1.0.1 in d:\\shared\\is5126-final\\is5126-final-assignment\\.venv\\lib\\site-packages (from matplotlib) (1.3.3)\n",
       "Requirement already satisfied: cycler>=0.10 in d:\\shared\\is5126-final\\is5126-final-assignment\\.venv\\lib\\site-packages (from matplotlib) (0.12.1)\n",
       "Requirement already satisfied: fonttools>=4.22.0 in d:\\shared\\is5126-final\\is5126-final-assignment\\.venv\\lib\\site-packages (from matplotlib) (4.60.1)\n",
@@ -59,17 +61,16 @@
       "Requirement already satisfied: distro<2,>=1.7.0 in d:\\shared\\is5126-final\\is5126-final-assignment\\.venv\\lib\\site-packages (from openai) (1.9.0)\n",
       "Requirement already satisfied: httpx<1,>=0.23.0 in d:\\shared\\is5126-final\\is5126-final-assignment\\.venv\\lib\\site-packages (from openai) (0.28.1)\n",
       "Requirement already satisfied: jiter<1,>=0.10.0 in d:\\shared\\is5126-final\\is5126-final-assignment\\.venv\\lib\\site-packages (from openai) (0.11.1)\n",
-      "Requirement already satisfied: pydantic<3,>=1.9.0 in d:\\shared\\is5126-final\\is5126-final-assignment\\.venv\\lib\\site-packages (from openai) (2.12.3)\n",
       "Requirement already satisfied: sniffio in d:\\shared\\is5126-final\\is5126-final-assignment\\.venv\\lib\\site-packages (from openai) (1.3.1)\n",
       "Requirement already satisfied: tqdm>4 in d:\\shared\\is5126-final\\is5126-final-assignment\\.venv\\lib\\site-packages (from openai) (4.67.1)\n",
       "Requirement already satisfied: typing-extensions<5,>=4.11 in d:\\shared\\is5126-final\\is5126-final-assignment\\.venv\\lib\\site-packages (from openai) (4.15.0)\n",
+      "Requirement already satisfied: annotated-types>=0.6.0 in d:\\shared\\is5126-final\\is5126-final-assignment\\.venv\\lib\\site-packages (from pydantic) (0.7.0)\n",
+      "Requirement already satisfied: pydantic-core==2.41.4 in d:\\shared\\is5126-final\\is5126-final-assignment\\.venv\\lib\\site-packages (from pydantic) (2.41.4)\n",
+      "Requirement already satisfied: typing-inspection>=0.4.2 in d:\\shared\\is5126-final\\is5126-final-assignment\\.venv\\lib\\site-packages (from pydantic) (0.4.2)\n",
       "Requirement already satisfied: idna>=2.8 in d:\\shared\\is5126-final\\is5126-final-assignment\\.venv\\lib\\site-packages (from anyio<5,>=3.5.0->openai) (3.11)\n",
       "Requirement already satisfied: certifi in d:\\shared\\is5126-final\\is5126-final-assignment\\.venv\\lib\\site-packages (from httpx<1,>=0.23.0->openai) (2025.10.5)\n",
       "Requirement already satisfied: httpcore==1.* in d:\\shared\\is5126-final\\is5126-final-assignment\\.venv\\lib\\site-packages (from httpx<1,>=0.23.0->openai) (1.0.9)\n",
       "Requirement already satisfied: h11>=0.16 in d:\\shared\\is5126-final\\is5126-final-assignment\\.venv\\lib\\site-packages (from httpcore==1.*->httpx<1,>=0.23.0->openai) (0.16.0)\n",
-      "Requirement already satisfied: annotated-types>=0.6.0 in d:\\shared\\is5126-final\\is5126-final-assignment\\.venv\\lib\\site-packages (from pydantic<3,>=1.9.0->openai) (0.7.0)\n",
-      "Requirement already satisfied: pydantic-core==2.41.4 in d:\\shared\\is5126-final\\is5126-final-assignment\\.venv\\lib\\site-packages (from pydantic<3,>=1.9.0->openai) (2.41.4)\n",
-      "Requirement already satisfied: typing-inspection>=0.4.2 in d:\\shared\\is5126-final\\is5126-final-assignment\\.venv\\lib\\site-packages (from pydantic<3,>=1.9.0->openai) (0.4.2)\n",
       "Requirement already satisfied: scipy>=1.8.0 in d:\\shared\\is5126-final\\is5126-final-assignment\\.venv\\lib\\site-packages (from scikit-learn) (1.16.2)\n",
       "Requirement already satisfied: joblib>=1.2.0 in d:\\shared\\is5126-final\\is5126-final-assignment\\.venv\\lib\\site-packages (from scikit-learn) (1.5.2)\n",
       "Requirement already satisfied: threadpoolctl>=3.1.0 in d:\\shared\\is5126-final\\is5126-final-assignment\\.venv\\lib\\site-packages (from scikit-learn) (3.6.0)\n",
@@ -80,21 +81,20 @@
       "Requirement already satisfied: click<9,>=7.0 in d:\\shared\\is5126-final\\is5126-final-assignment\\.venv\\lib\\site-packages (from streamlit) (8.3.0)\n",
       "Requirement already satisfied: protobuf<7,>=3.20 in d:\\shared\\is5126-final\\is5126-final-assignment\\.venv\\lib\\site-packages (from streamlit) (6.33.0)\n",
       "Requirement already satisfied: pyarrow>=7.0 in d:\\shared\\is5126-final\\is5126-final-assignment\\.venv\\lib\\site-packages (from streamlit) (21.0.0)\n",
-      "Requirement already satisfied: requests<3,>=2.27 in d:\\shared\\is5126-final\\is5126-final-assignment\\.venv\\lib\\site-packages (from streamlit) (2.32.5)\n",
       "Requirement already satisfied: tenacity<10,>=8.1.0 in d:\\shared\\is5126-final\\is5126-final-assignment\\.venv\\lib\\site-packages (from streamlit) (9.1.2)\n",
       "Requirement already satisfied: toml<2,>=0.10.1 in d:\\shared\\is5126-final\\is5126-final-assignment\\.venv\\lib\\site-packages (from streamlit) (0.10.2)\n",
       "Requirement already satisfied: watchdog<7,>=2.1.5 in d:\\shared\\is5126-final\\is5126-final-assignment\\.venv\\lib\\site-packages (from streamlit) (6.0.0)\n",
       "Requirement already satisfied: gitpython!=3.1.19,<4,>=3.0.7 in d:\\shared\\is5126-final\\is5126-final-assignment\\.venv\\lib\\site-packages (from streamlit) (3.1.45)\n",
       "Requirement already satisfied: pydeck<1,>=0.8.0b4 in d:\\shared\\is5126-final\\is5126-final-assignment\\.venv\\lib\\site-packages (from streamlit) (0.9.1)\n",
       "Requirement already satisfied: tornado!=6.5.0,<7,>=6.0.3 in d:\\shared\\is5126-final\\is5126-final-assignment\\.venv\\lib\\site-packages (from streamlit) (6.5.2)\n",
+      "Requirement already satisfied: charset_normalizer<4,>=2 in d:\\shared\\is5126-final\\is5126-final-assignment\\.venv\\lib\\site-packages (from requests) (3.4.4)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in d:\\shared\\is5126-final\\is5126-final-assignment\\.venv\\lib\\site-packages (from requests) (2.5.0)\n",
       "Requirement already satisfied: jinja2 in d:\\shared\\is5126-final\\is5126-final-assignment\\.venv\\lib\\site-packages (from altair!=5.4.0,!=5.4.1,<6,>=4.0->streamlit) (3.1.6)\n",
       "Requirement already satisfied: jsonschema>=3.0 in d:\\shared\\is5126-final\\is5126-final-assignment\\.venv\\lib\\site-packages (from altair!=5.4.0,!=5.4.1,<6,>=4.0->streamlit) (4.25.1)\n",
       "Requirement already satisfied: narwhals>=1.14.2 in d:\\shared\\is5126-final\\is5126-final-assignment\\.venv\\lib\\site-packages (from altair!=5.4.0,!=5.4.1,<6,>=4.0->streamlit) (2.8.0)\n",
       "Requirement already satisfied: colorama in d:\\shared\\is5126-final\\is5126-final-assignment\\.venv\\lib\\site-packages (from click<9,>=7.0->streamlit) (0.4.6)\n",
       "Requirement already satisfied: gitdb<5,>=4.0.1 in d:\\shared\\is5126-final\\is5126-final-assignment\\.venv\\lib\\site-packages (from gitpython!=3.1.19,<4,>=3.0.7->streamlit) (4.0.12)\n",
       "Requirement already satisfied: smmap<6,>=3.0.1 in d:\\shared\\is5126-final\\is5126-final-assignment\\.venv\\lib\\site-packages (from gitdb<5,>=4.0.1->gitpython!=3.1.19,<4,>=3.0.7->streamlit) (5.0.2)\n",
-      "Requirement already satisfied: charset_normalizer<4,>=2 in d:\\shared\\is5126-final\\is5126-final-assignment\\.venv\\lib\\site-packages (from requests<3,>=2.27->streamlit) (3.4.4)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in d:\\shared\\is5126-final\\is5126-final-assignment\\.venv\\lib\\site-packages (from requests<3,>=2.27->streamlit) (2.5.0)\n",
       "Requirement already satisfied: python-dotenv in d:\\shared\\is5126-final\\is5126-final-assignment\\.venv\\lib\\site-packages (from dotenv) (1.1.1)\n",
       "Requirement already satisfied: MarkupSafe>=2.0 in d:\\shared\\is5126-final\\is5126-final-assignment\\.venv\\lib\\site-packages (from jinja2->altair!=5.4.0,!=5.4.1,<6,>=4.0->streamlit) (3.0.3)\n",
       "Requirement already satisfied: attrs>=22.2.0 in d:\\shared\\is5126-final\\is5126-final-assignment\\.venv\\lib\\site-packages (from jsonschema>=3.0->altair!=5.4.0,!=5.4.1,<6,>=4.0->streamlit) (25.4.0)\n",
@@ -122,13 +122,13 @@
     }
    ],
    "source": [
-    "%pip install matplotlib seaborn pandas numpy openai scikit-learn fastapi streamlit dotenv\n",
+    "%pip install matplotlib seaborn pandas numpy openai scikit-learn fastapi streamlit dotenv pydantic requests\n",
     "%pip install torch torchvision --index-url https://download.pytorch.org/whl/cu130"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "id": "0a6ddf2e",
    "metadata": {},
    "outputs": [],
@@ -137,7 +137,8 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import os\n",
-    "from openai import OpenAI"
+    "from openai import OpenAI\n",
+    "from pydantic import BaseModel"
    ]
   },
   {
@@ -3311,6 +3312,152 @@
    ],
    "source": [
     "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f9897e6",
+   "metadata": {},
+   "source": [
+    "# Experiment with Gen-AI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "eac8e024",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AI-generated insights:\n",
+      "Based on the summary statistics provided, here are some insights into the dataset:\n",
+      "\n",
+      "### 1. **Demographics and Employee Profiles:**\n",
+      "   - **Age Distribution**: The average age of employees in the dataset is approximately 37 years (mean = 36.9), with the youngest employee being 18 and the oldest being 60. This indicates a relatively young workforce.\n",
+      "   - **Distance from Home**: On average, employees live about 9.2 kilometers from their workplace, which varies significantly (ranging from 1 km to 29 km), suggesting a broad range in geographic location among employees.\n",
+      "\n",
+      "### 2. **Salary Insights:**\n",
+      "   - **Monthly Income**: The average monthly income of employees is around $6503, with a substantial range (from $1009 to $19999). The mean is notably higher than the median (4919), suggesting a skew towards higher salaries.\n",
+      "   - **Daily Rate and Monthly Rate**: The figures for daily rates (mean = 802) and monthly rates further indicate varying compensation structures, and the upper bounds show that some employees earn quite high rates which may reflect disparities in job roles or levels.\n",
+      "\n",
+      "### 3. **Job Satisfaction and Environment:**\n",
+      "   - **General Satisfaction**: Job satisfaction and environment satisfaction averages are reasonably high (around 2.73 and 2.72 respectively on a scale that likely ranges from 1 to 4). This could indicate a generally positive working environment, which is beneficial for retention.\n",
+      "   - **Performance and Involvement**: With job involvement and performance ratings averaging around 2.73 and 3.15, respectively, it suggests that employees are moderately engaged in their work.\n",
+      "\n",
+      "### 4. **Employee Attributes:**\n",
+      "   - **Job Levels and Roles**: With an average job level of around 2.06 and the maximum value being 4, it indicates there are multiple levels of job stratification within the organization. The majority of employees are at the lower to mid-level rankings.\n",
+      "   - **Tenure**: Employees have an average of approximately 11.3 years of total working experience and around 7 years in their current roles, which indicates a relatively stable workforce with many employees having significant experience.\n",
+      "   - **Years at Company**: The average employee has been with the company for about 2.76 years, suggesting some turnover or possibly varied hiring practices.\n",
+      "\n",
+      "### 5. **Attrition Rates:**\n",
+      "   - **Attrition Binary Indicator**: The attrition rate binary variable indicates whether employees have left the company (1) or stayed (0). Given the total count of employees at 1470, the distribution of this variable would be essential for understanding retention (although the precise count isn’t provided).\n",
+      "   - **Marital and Gender Status**: The dataset includes binary classifications for marital and gender status, which might provide insights into demographic aspects affecting attrition or job satisfaction.\n",
+      "\n",
+      "### 6. **Work-Life Balance and Flexibility:**\n",
+      "   - **Work-Life Balance**: With an average score of 2.77, this metric gives a glimpse into employees' perceptions of balance between work and personal life, potentially reflecting workplace culture and flexibility.\n",
+      "   - **Overtime**: The overtime binary variable may also be connected to work-life balance and could be further analyzed concerning job satisfaction.\n",
+      "\n",
+      "### 7. **Compensation Insights:**\n",
+      "   - **Stock Options and Salary Hikes**: The presence of stock options (average = 0.79) combined with the average salary hike of about 15% indicates a positive compensation strategy aimed at retention and motivation.\n",
+      "   - **Training Opportunities**: An average of 2.8 training times last year suggests a focus on employee development and growth, which could play an important role in both satisfaction and performance.\n",
+      "\n",
+      "### Conclusion:\n",
+      "Overall, the dataset provides a wealth of information that can be used to analyze employee dynamics within the organization. The balance of job satisfaction, compensation, and seniority, along with employee demographics, gives insights into areas for improving retention, satisfaction, and perhaps even recruitment strategies. Further analysis could include regression to correlate these factors with attrition as well as exploring trends and patterns based on gender and marital status.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# TODO: Use OpenAI API to generate insights from the dataset\n",
+    "\n",
+    "system_prompt = \"\"\"You are a data analyst. Given the summary statistics of a dataset, provide insights about the data.\"\"\"\n",
+    "user_prompt = f\"\"\"Here are the summary statistics of the dataset:\n",
+    "{df.describe().to_string()}\n",
+    "Provide insights about the data.\"\"\"\n",
+    "response = openai.chat.completions.create(\n",
+    "\tmodel=\"gpt-4o-mini\",\n",
+    "\tmessages=[\n",
+    "\t\t{\"role\": \"system\", \"content\": system_prompt},\n",
+    "\t\t{\"role\": \"user\", \"content\": user_prompt}\n",
+    "\t]\n",
+    ")\n",
+    "print(\"AI-generated insights:\")\n",
+    "print(response.choices[0].message.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "0b947bc0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"important_features\": [\n",
+      "    \"Age\",\n",
+      "    \"JobSatisfaction\",\n",
+      "    \"DistanceFromHome\",\n",
+      "    \"MonthlyIncome\",\n",
+      "    \"YearsAtCompany\",\n",
+      "    \"WorkLifeBalance\",\n",
+      "    \"EnvironmentSatisfaction\",\n",
+      "    \"JobLevel\",\n",
+      "    \"PerformanceRating\",\n",
+      "    \"OverTime_Binary\"\n",
+      "  ],\n",
+      "  \"reasoning\": \"These features are likely to influence employee satisfaction and retention. Age can correlate with career stage, JobSatisfaction directly impacts attrition likelihood, and DistanceFromHome affects work-life balance. MonthlyIncome and YearsAtCompany are indicators of employee stability and satisfaction. WorkLifeBalance, EnvironmentSatisfaction, JobLevel, PerformanceRating, and OverTime_Binary reflect aspects of job conditions and expectations, which are critical in attrition decisions.\"\n",
+      "}\n",
+      "Important features: ['Age', 'JobSatisfaction', 'DistanceFromHome', 'MonthlyIncome', 'YearsAtCompany', 'WorkLifeBalance', 'EnvironmentSatisfaction', 'JobLevel', 'PerformanceRating', 'OverTime_Binary']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# TODO: To use OpenAI for feature selection or engineering and return the results as a list\n",
+    "\n",
+    "class FeatureSuggestions(BaseModel):\n",
+    "    important_features: list[str]\n",
+    "    reasoning: str\n",
+    "\n",
+    "system_prompt_fs = \"\"\"You are a feature engineering expert.\n",
+    "Return your answer as a JSON object like this:\n",
+    "{\n",
+    "  \"important_features\": [\"feature1\", \"feature2\"],\n",
+    "  \"reasoning\": \"short explanation\"\n",
+    "}\"\"\"\n",
+    "user_prompt_fs = f\"\"\"Here are the summary statistics of the dataset:\n",
+    "{df.describe().to_string()}\n",
+    "Suggest the top 10 most important features for predicting employee attrition.\"\"\"\n",
+    "response_fs = openai.chat.completions.create(\n",
+    "\tmodel=\"gpt-4o-mini\",\n",
+    " \tresponse_format={\"type\": \"json_object\"},\n",
+    "\ttemperature=0.5,\n",
+    "\tmessages=[\n",
+    "\t\t{\"role\": \"system\", \"content\": system_prompt_fs},\n",
+    "\t\t{\"role\": \"user\", \"content\": user_prompt_fs}\n",
+    "\t]\n",
+    ")\n",
+    "response_json = response_fs.choices[0].message.content\n",
+    "parsed = FeatureSuggestions.model_validate_json(response_json)\n",
+    "\n",
+    "# 5️⃣ Use safely\n",
+    "print(parsed.model_dump_json(indent=2))\n",
+    "print(\"Important features:\", parsed.important_features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce2aca50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: Use Openai API to perform EDA, will need to perform function calling\n",
+    "\n"
    ]
   }
  ],
