--- a/group-assignment.ipynb
+++ b/group-assignment.ipynb
@@ -3451,13 +3451,320 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ce2aca50",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ EDA functions and schemas defined successfully!\n",
+      "Available functions: ['check_missing_data', 'plot_visualization', 'encode_categorical_column', 'get_column_info']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# TODO: Use Openai API to perform EDA, will need to perform function calling\n",
+    "\n",
+    "import json\n",
+    "\n",
+    "\n",
+    "# Define functions that the AI can call\n",
+    "def check_missing_data(df_name=\"df\"):\n",
+    "    \"\"\"Check for missing data in the dataset\"\"\"\n",
+    "    missing = df.isna().sum()\n",
+    "    missing_pct = (df.isna().sum() / len(df)) * 100\n",
+    "    result = pd.DataFrame({\n",
+    "        'Missing_Count': missing,\n",
+    "        'Missing_Percentage': missing_pct\n",
+    "    })\n",
+    "    result = result[result['Missing_Count'] > 0]\n",
+    "    \n",
+    "    if len(result) == 0:\n",
+    "        return \"No missing data found in the dataset.\"\n",
+    "    else:\n",
+    "        return f\"Missing data summary:\\n{result.to_string()}\"\n",
+    "\n",
+    "def plot_visualization(plot_type, column_name, title=None, bins=20):\n",
+    "    \"\"\"Create a visualization for the specified column\"\"\"\n",
+    "    try:\n",
+    "        if plot_type == \"histogram\":\n",
+    "            plt.figure(figsize=(10, 6))\n",
+    "            df[column_name].plot(kind='hist', bins=bins, edgecolor='black')\n",
+    "            plt.title(title or f'Histogram of {column_name}')\n",
+    "            plt.xlabel(column_name)\n",
+    "            plt.ylabel('Frequency')\n",
+    "            plt.grid(axis='y', alpha=0.3)\n",
+    "            plt.show()\n",
+    "            return f\"Created histogram for {column_name}\"\n",
+    "            \n",
+    "        elif plot_type == \"bar\":\n",
+    "            plt.figure(figsize=(10, 6))\n",
+    "            df[column_name].value_counts().plot(kind='bar', edgecolor='black')\n",
+    "            plt.title(title or f'Bar Chart of {column_name}')\n",
+    "            plt.xlabel(column_name)\n",
+    "            plt.ylabel('Count')\n",
+    "            plt.xticks(rotation=45)\n",
+    "            plt.grid(axis='y', alpha=0.3)\n",
+    "            plt.show()\n",
+    "            return f\"Created bar chart for {column_name}\"\n",
+    "            \n",
+    "        elif plot_type == \"pie\":\n",
+    "            plt.figure(figsize=(10, 6))\n",
+    "            df[column_name].value_counts().plot(kind='pie', autopct='%1.1f%%')\n",
+    "            plt.title(title or f'Pie Chart of {column_name}')\n",
+    "            plt.ylabel('')\n",
+    "            plt.show()\n",
+    "            return f\"Created pie chart for {column_name}\"\n",
+    "            \n",
+    "        elif plot_type == \"box\":\n",
+    "            plt.figure(figsize=(10, 6))\n",
+    "            df.boxplot(column=column_name)\n",
+    "            plt.title(title or f'Box Plot of {column_name}')\n",
+    "            plt.ylabel(column_name)\n",
+    "            plt.grid(axis='y', alpha=0.3)\n",
+    "            plt.show()\n",
+    "            return f\"Created box plot for {column_name}\"\n",
+    "            \n",
+    "        elif plot_type == \"scatter\":\n",
+    "            # For scatter, column_name should be \"column1,column2\"\n",
+    "            cols = column_name.split(',')\n",
+    "            if len(cols) == 2:\n",
+    "                plt.figure(figsize=(10, 6))\n",
+    "                plt.scatter(df[cols[0]], df[cols[1]], alpha=0.5)\n",
+    "                plt.xlabel(cols[0])\n",
+    "                plt.ylabel(cols[1])\n",
+    "                plt.title(title or f'Scatter Plot: {cols[0]} vs {cols[1]}')\n",
+    "                plt.grid(alpha=0.3)\n",
+    "                plt.show()\n",
+    "                return f\"Created scatter plot for {cols[0]} vs {cols[1]}\"\n",
+    "            else:\n",
+    "                return \"Error: Scatter plot requires two columns separated by comma\"\n",
+    "        else:\n",
+    "            return f\"Error: Unknown plot type '{plot_type}'\"\n",
+    "    except Exception as e:\n",
+    "        return f\"Error creating {plot_type} for {column_name}: {str(e)}\"\n",
+    "\n",
+    "def encode_categorical_column(column_name, mapping_dict):\n",
+    "    \"\"\"\n",
+    "    Encode a categorical column to numerical values\n",
+    "    mapping_dict should be like: {\"Yes\": 1, \"No\": 0}\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        new_column_name = f\"{column_name}_Encoded\"\n",
+    "        df[new_column_name] = df[column_name].map(mapping_dict)\n",
+    "        \n",
+    "        # Check if any values were not mapped\n",
+    "        unmapped = df[df[new_column_name].isna()][column_name].unique()\n",
+    "        if len(unmapped) > 0:\n",
+    "            return f\"Warning: Column '{column_name}' encoded to '{new_column_name}', but values {unmapped.tolist()} were not in mapping\"\n",
+    "        \n",
+    "        return f\"Successfully encoded '{column_name}' to '{new_column_name}' with mapping: {mapping_dict}\"\n",
+    "    except Exception as e:\n",
+    "        return f\"Error encoding {column_name}: {str(e)}\"\n",
+    "\n",
+    "def get_column_info(column_name=None):\n",
+    "    \"\"\"Get information about columns in the dataset\"\"\"\n",
+    "    if column_name:\n",
+    "        if column_name in df.columns:\n",
+    "            unique_vals = df[column_name].unique()\n",
+    "            return f\"Column '{column_name}':\\n- Type: {df[column_name].dtype}\\n- Unique values ({len(unique_vals)}): {unique_vals.tolist()[:20]}\\n- Sample data: {df[column_name].head(5).tolist()}\"\n",
+    "        else:\n",
+    "            return f\"Column '{column_name}' not found in dataset\"\n",
+    "    else:\n",
+    "        return f\"Available columns:\\n{df.columns.tolist()}\\n\\nData types:\\n{df.dtypes.to_string()}\"\n",
+    "\n",
+    "# Define function schemas for OpenAI\n",
+    "functions = [\n",
+    "    {\n",
+    "        \"name\": \"check_missing_data\",\n",
+    "        \"description\": \"Check for missing data in the dataset and return a summary\",\n",
+    "        \"parameters\": {\n",
+    "            \"type\": \"object\",\n",
+    "            \"properties\": {\n",
+    "                \"df_name\": {\n",
+    "                    \"type\": \"string\",\n",
+    "                    \"description\": \"Name of the dataframe (default: 'df')\"\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"plot_visualization\",\n",
+    "        \"description\": \"Create a visualization (histogram, bar, pie, box, or scatter plot) for a specified column\",\n",
+    "        \"parameters\": {\n",
+    "            \"type\": \"object\",\n",
+    "            \"properties\": {\n",
+    "                \"plot_type\": {\n",
+    "                    \"type\": \"string\",\n",
+    "                    \"enum\": [\"histogram\", \"bar\", \"pie\", \"box\", \"scatter\"],\n",
+    "                    \"description\": \"Type of plot to create\"\n",
+    "                },\n",
+    "                \"column_name\": {\n",
+    "                    \"type\": \"string\",\n",
+    "                    \"description\": \"Name of the column to plot. For scatter plots, use 'column1,column2' format\"\n",
+    "                },\n",
+    "                \"title\": {\n",
+    "                    \"type\": \"string\",\n",
+    "                    \"description\": \"Optional title for the plot\"\n",
+    "                },\n",
+    "                \"bins\": {\n",
+    "                    \"type\": \"integer\",\n",
+    "                    \"description\": \"Number of bins for histogram (default: 20)\"\n",
+    "                }\n",
+    "            },\n",
+    "            \"required\": [\"plot_type\", \"column_name\"]\n",
+    "        }\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"encode_categorical_column\",\n",
+    "        \"description\": \"Encode a categorical column to numerical values using a provided mapping dictionary\",\n",
+    "        \"parameters\": {\n",
+    "            \"type\": \"object\",\n",
+    "            \"properties\": {\n",
+    "                \"column_name\": {\n",
+    "                    \"type\": \"string\",\n",
+    "                    \"description\": \"Name of the column to encode\"\n",
+    "                },\n",
+    "                \"mapping_dict\": {\n",
+    "                    \"type\": \"object\",\n",
+    "                    \"description\": \"Dictionary mapping categorical values to numbers, e.g., {'Yes': 1, 'No': 0}\"\n",
+    "                }\n",
+    "            },\n",
+    "            \"required\": [\"column_name\", \"mapping_dict\"]\n",
+    "        }\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"get_column_info\",\n",
+    "        \"description\": \"Get information about columns in the dataset, including data types and unique values\",\n",
+    "        \"parameters\": {\n",
+    "            \"type\": \"object\",\n",
+    "            \"properties\": {\n",
+    "                \"column_name\": {\n",
+    "                    \"type\": \"string\",\n",
+    "                    \"description\": \"Name of specific column to inspect. If not provided, returns info about all columns\"\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "# Map function names to actual functions\n",
+    "available_functions = {\n",
+    "    \"check_missing_data\": check_missing_data,\n",
+    "    \"plot_visualization\": plot_visualization,\n",
+    "    \"encode_categorical_column\": encode_categorical_column,\n",
+    "    \"get_column_info\": get_column_info\n",
+    "}\n",
+    "\n",
+    "print(\"✅ EDA functions and schemas defined successfully!\")\n",
+    "print(f\"Available functions: {list(available_functions.keys())}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "014a18b1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Use Openai API to perform EDA, will need to perform function calling\n",
-    "\n"
+    "# Execute OpenAI-powered EDA with function calling\n",
+    "\n",
+    "# Create the initial prompt\n",
+    "system_prompt_eda = \"\"\"You are a data analyst assistant. You have access to functions to perform EDA on an employee attrition dataset.\n",
+    "\n",
+    "Your task is to:\n",
+    "1. Check for missing data in the dataset\n",
+    "2. Create at least 4 different visualizations to explore the data (choose appropriate plot types for different columns)\n",
+    "3. Identify and encode categorical columns that need to be converted to numerical values for machine learning\n",
+    "\n",
+    "Use the available functions to accomplish these tasks. Call get_column_info first to understand the dataset structure.\"\"\"\n",
+    "\n",
+    "user_prompt_eda = \"\"\"Please perform comprehensive EDA on the employee attrition dataset. \n",
+    "First, check what columns are available, then check for missing data, create insightful visualizations, \n",
+    "and finally encode any remaining categorical columns that haven't been encoded yet.\"\"\"\n",
+    "\n",
+    "# Initialize conversation\n",
+    "messages = [\n",
+    "    {\"role\": \"system\", \"content\": system_prompt_eda},\n",
+    "    {\"role\": \"user\", \"content\": user_prompt_eda}\n",
+    "]\n",
+    "\n",
+    "print(\"🤖 Starting AI-powered EDA with function calling...\\n\")\n",
+    "print(\"=\" * 80)\n",
+    "\n",
+    "# Run the conversation loop\n",
+    "max_iterations = 15  # Prevent infinite loops\n",
+    "iteration = 0\n",
+    "\n",
+    "while iteration < max_iterations:\n",
+    "    iteration += 1\n",
+    "    print(f\"\\n--- Iteration {iteration} ---\")\n",
+    "    \n",
+    "    # Make API call\n",
+    "    response = openai.chat.completions.create(\n",
+    "        model=\"gpt-4o-mini\",\n",
+    "        messages=messages,\n",
+    "        tools=[{\"type\": \"function\", \"function\": func} for func in functions],\n",
+    "        tool_choice=\"auto\"\n",
+    "    )\n",
+    "    \n",
+    "    response_message = response.choices[0].message\n",
+    "    messages.append(response_message)\n",
+    "    \n",
+    "    # Check if the model wants to call functions\n",
+    "    tool_calls = response_message.tool_calls\n",
+    "    \n",
+    "    if not tool_calls:\n",
+    "        # No more function calls - the assistant has finished\n",
+    "        print(\"\\n✅ AI Assistant finished:\")\n",
+    "        print(response_message.content)\n",
+    "        break\n",
+    "    \n",
+    "    # Process each function call\n",
+    "    for tool_call in tool_calls:\n",
+    "        function_name = tool_call.function.name\n",
+    "        function_args = json.loads(tool_call.function.arguments)\n",
+    "        \n",
+    "        print(f\"\\n🔧 Calling function: {function_name}\")\n",
+    "        print(f\"   Arguments: {function_args}\")\n",
+    "        \n",
+    "        # Call the actual function\n",
+    "        function_to_call = available_functions[function_name]\n",
+    "        function_response = function_to_call(**function_args)\n",
+    "        \n",
+    "        print(f\"   Result: {function_response[:200]}...\" if len(str(function_response)) > 200 else f\"   Result: {function_response}\")\n",
+    "        \n",
+    "        # Add function response to messages\n",
+    "        messages.append({\n",
+    "            \"role\": \"tool\",\n",
+    "            \"tool_call_id\": tool_call.id,\n",
+    "            \"name\": function_name,\n",
+    "            \"content\": str(function_response)\n",
+    "        })\n",
+    "\n",
+    "print(\"\\n\" + \"=\" * 80)\n",
+    "print(\"✅ EDA completed!\")\n",
+    "print(f\"\\nTotal iterations: {iteration}\")\n",
+    "print(f\"Check the visualizations above and the new encoded columns in the dataframe.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7686abe0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Display the updated dataframe with newly encoded columns\n",
+    "print(\"\\n📊 Updated DataFrame Info:\")\n",
+    "print(f\"Shape: {df.shape}\")\n",
+    "print(f\"\\nColumns: {df.columns.tolist()}\")\n",
+    "print(\"\\n\" + \"=\" * 80)\n",
+    "print(\"\\nFirst few rows with all columns (including newly encoded):\")\n",
+    "df.head(10)\n"
    ]
   }
  ],
